deployment/k8s/02-postgres-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter

  labels:
    app: postgres-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      serviceAccountName: default
      containers:
        - name: postgres-exporter
          image: prometheuscommunity/postgres-exporter:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9187
              name: metrics
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter

  labels:
    app: postgres-exporter
spec:
  type: ClusterIP
  ports:
    - port: 9187
      targetPort: 9187
      protocol: TCP
      name: metrics
  selector:
    app: postgres-exporter
